--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,5 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 /* ..................................................... */
 /* .............. Default CSS END ...................... */
@@ -18,29 +18,28 @@
   font-style: normal;
 } */
 
-
 @layer base {
   :root {
-    --primary-font: "SF-Pro-Display";
+    --primary-font: "Open Sans";
     --secondary-font: "Inter";
-    --primary-color: #624D9F;
-    --secondary-color: #FFFFFF;
-    --accent1: #F3F8FD;
-    --accent2: #DB9FDA;
-    --accent3: #CCE0F1;
+    --primary-color: #624d9f;
+    --secondary-color: #ffffff;
+    --accent1: #f3f8fd;
+    --accent2: #db9fda;
+    --accent3: #cce0f1;
     --black: #000000;
-    --border: #E2EDF7;
-    --border2: #F5F6F6;
+    --border: #e2edf7;
+    --border2: #f5f6f6;
     --text: #202124;
-    --text2: #575B63;
+    --text2: #575b63;
   }
 
   body {
-    transition: 0.4s;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -ms-transition: 0.4s;
-    -o-transition: 0.4s;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
   }
 
   ol,
@@ -48,7 +47,7 @@
   menu {
     list-style: none;
   }
-  
+
   p {
     font-size: 16px;
     font-family: var(--secondary-font);
@@ -61,11 +60,15 @@
     font-family: var(--primary-font);
   }
 
-  a, button {
+  a,
+  button {
     font-family: var(--primary-font);
   }
 
-  h1, h2, h3, h4 {
+  h1,
+  h2,
+  h3,
+  h4 {
     font-family: var(--primary-font);
   }
 
@@ -77,7 +80,7 @@
 /* Font */
 @layer utilities {
   .font-primary {
-    font-family: "SF-Pro-Display" !important;
+    font-family: "Open Sans" !important;
   }
 
   .font-secondary {
@@ -111,3 +114,35 @@
 }
 
 /* .........Preloader Animation for loading spinner........... */
+
+
+/* .........Hero Slider Start........... */
+.hero .fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.7s;
+}
+.hero .swiper-slide-active .fade-up {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Pagination Design */
+.hero .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background: var(--secondary-color);
+  opacity: 1;
+  transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+}
+.hero .swiper-pagination-bullet-active {
+  width: 28px;
+  border-radius: 30px;
+  background: var(--primary-color);
+  transform: scale(1.2);
+}
+/* .........Hero Slider End........... */
