categorie,best sell, summer sale, fruits,done/ hot deal ongo

--- a/src/input.css
+++ b/src/input.css
@@ -27,9 +27,11 @@
     --accent1: #f3f8fd;
     --accent2: #db9fda;
     --accent3: #cce0f1;
+    --accent4: #EEB13C;
     --black: #000000;
     --border: #e2edf7;
     --border2: #f5f6f6;
+    --border3: #F3F8FD;
     --text: #202124;
     --text2: #575b63;
   }
