--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 /* ..................................................... */
@@ -20,7 +20,7 @@
 
 @layer base {
   :root {
-    --primary-font: "Open Sans";
+    --primary-font: "Bricolage Grotesque";
     --secondary-font: "Inter";
     --primary-color: #624d9f;
     --secondary-color: #ffffff;
@@ -82,7 +82,7 @@
 /* Font */
 @layer utilities {
   .font-primary {
-    font-family: "Open Sans" !important;
+    font-family: "Bricolage Grotesque" !important;
   }
 
   .font-secondary {
