--- a/src/input.css
+++ b/src/input.css
@@ -8,16 +8,6 @@
 /* Import Tailwind */
 @import "tailwindcss";
 
-/* Custom Font */
-
-/* @font-face {
-  font-family: "Chillax";
-  src: url("../assets/fonts/San Francisco Pro Display/SF-Pro-Display-Bold.otf") format("");
-  font-weight: 700;
-  font-display: swap;
-  font-style: normal;
-} */
-
 @layer base {
   :root {
     --primary-font: "Bricolage Grotesque";
@@ -147,3 +137,54 @@
   transform: scale(1.2);
 }
 /* .........Hero Slider End........... */
+
+/*.... Price Filter Range slider styles .... */
+.range-slider {
+  position: relative;
+  width: 100%;
+  height: 6px;
+}
+.range-slider input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 6px;
+  background: transparent;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  z-index: 3;
+}
+.range-slider input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: var(--border2);
+  cursor: pointer;
+  border: 2px solid var(--primary-color);
+  pointer-events: all;
+  position: relative;
+  z-index: 5;
+}
+.slider-track {
+  position: absolute;
+  height: 6px;
+  background: var(--primary-color);
+  border-radius: 9999px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.slider-bg {
+  position: absolute;
+  height: 6px;
+  background: #d1d5db;
+  border-radius: 9999px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  z-index: 1;
+}
+/*.... Price Filter Range slider styles .... */
