--- a/src/output.css
+++ b/src/output.css
@@ -9,18 +9,15 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-400: oklch(70.4% 0.191 22.216);
     --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-orange-500: oklch(70.5% 0.213 47.604);
-    --color-orange-600: oklch(64.6% 0.222 41.116);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-purple-200: oklch(90.2% 0.063 306.703);
+    --color-purple-100: oklch(94.6% 0.033 307.174);
     --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-purple-600: oklch(55.8% 0.288 302.321);
     --color-purple-700: oklch(49.6% 0.265 301.924);
-    --color-gray-50: oklch(98.5% 0.002 247.839);
+    --color-purple-900: oklch(38.1% 0.176 304.987);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
@@ -31,10 +28,8 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-md: 28rem;
     --container-lg: 32rem;
     --container-xl: 36rem;
-    --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -55,7 +50,6 @@
     --font-weight-bold: 700;
     --leading-snug: 1.375;
     --leading-relaxed: 1.625;
-    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -293,6 +287,9 @@
   .left-2 {
     left: calc(var(--spacing) * 2);
   }
+  .left-6 {
+    left: calc(var(--spacing) * 6);
+  }
   .z-30 {
     z-index: 30;
   }
@@ -344,6 +341,9 @@
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
   }
+  .my-6 {
+    margin-block: calc(var(--spacing) * 6);
+  }
   .my-\[60px\] {
     margin-block: 60px;
   }
@@ -355,6 +355,9 @@
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
   }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
@@ -395,6 +398,9 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
@@ -412,6 +418,9 @@
   }
   .mb-\[78\.16px\] {
     margin-bottom: 78.16px;
+  }
+  .ml-1 {
+    margin-left: calc(var(--spacing) * 1);
   }
   .line-clamp-1 {
     overflow: hidden;
@@ -458,6 +467,15 @@
   .\!h-10 {
     height: calc(var(--spacing) * 10) !important;
   }
+  .\!h-\[20px\] {
+    height: 20px !important;
+  }
+  .\!h-\[30px\] {
+    height: 30px !important;
+  }
+  .\!h-\[40px\] {
+    height: 40px !important;
+  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
@@ -473,20 +491,17 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
   .h-14 {
     height: calc(var(--spacing) * 14);
-  }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
   }
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
   .h-32 {
     height: calc(var(--spacing) * 32);
-  }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
   }
   .h-\[18px\] {
     height: 18px;
@@ -500,38 +515,11 @@
   .h-\[50px\] {
     height: 50px;
   }
-  .h-\[100\%\] {
-    height: 100%;
-  }
-  .h-\[100px\] {
-    height: 100px;
-  }
-  .h-\[130px\] {
-    height: 130px;
-  }
   .h-\[140px\] {
     height: 140px;
   }
-  .h-\[146px\] {
-    height: 146px;
-  }
-  .h-\[150px\] {
-    height: 150px;
-  }
-  .h-\[152px\] {
-    height: 152px;
-  }
-  .h-\[160px\] {
-    height: 160px;
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
   .h-\[calc\(100\%-120px\)\] {
     height: calc(100% - 120px);
-  }
-  .h-\[calc\(100vh-330px\)\] {
-    height: calc(100vh - 330px);
   }
   .h-full {
     height: 100%;
@@ -539,17 +527,14 @@
   .\!max-h-\[100px\] {
     max-height: 100px !important;
   }
-  .\!max-h-\[200px\] {
-    max-height: 200px !important;
-  }
-  .max-h-\[calc\(100vh-80px\)\] {
-    max-height: calc(100vh - 80px);
+  .max-h-0 {
+    max-height: calc(var(--spacing) * 0);
   }
   .max-h-\[calc\(100vh-280px\)\] {
     max-height: calc(100vh - 280px);
   }
-  .max-h-\[calc\(100vh-330px\)\] {
-    max-height: calc(100vh - 330px);
+  .max-h-screen {
+    max-height: 100vh;
   }
   .min-h-0 {
     min-height: calc(var(--spacing) * 0);
@@ -569,29 +554,17 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
+  }
   .w-14 {
     width: calc(var(--spacing) * 14);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
   }
   .w-48 {
     width: calc(var(--spacing) * 48);
   }
-  .w-72 {
-    width: calc(var(--spacing) * 72);
-  }
-  .w-90 {
-    width: calc(var(--spacing) * 90);
-  }
-  .w-96 {
-    width: calc(var(--spacing) * 96);
-  }
   .w-\[1px\] {
     width: 1px;
-  }
-  .w-\[20px\] {
-    width: 20px;
   }
   .w-\[40px\] {
     width: 40px;
@@ -599,14 +572,8 @@
   .w-\[50px\] {
     width: 50px;
   }
-  .w-\[80\%\] {
-    width: 80%;
-  }
   .w-\[88\%\] {
     width: 88%;
-  }
-  .w-\[90\%\] {
-    width: 90%;
   }
   .w-\[100\%\] {
     width: 100%;
@@ -622,9 +589,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-96 {
-    max-width: calc(var(--spacing) * 96);
   }
   .max-w-\[50\%\] {
     max-width: 50%;
@@ -704,9 +668,6 @@
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
-  }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
@@ -791,14 +752,23 @@
   .overflow-y-auto {
     overflow-y: auto;
   }
+  .\!rounded-full {
+    border-radius: calc(infinity * 1px) !important;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
   .rounded-\[4px\] {
     border-radius: 4px;
   }
+  .rounded-\[6px\] {
+    border-radius: 6px;
+  }
   .rounded-\[12px\] {
     border-radius: 12px;
+  }
+  .rounded-\[16px\] {
+    border-radius: 16px;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -819,6 +789,9 @@
     border-top-right-radius: var(--radius-md);
     border-bottom-right-radius: var(--radius-md);
   }
+  .rounded-tr-\[6px\] {
+    border-top-right-radius: 6px;
+  }
   .rounded-tr-\[30px\] {
     border-top-right-radius: 30px;
   }
@@ -837,6 +810,14 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
   }
   .border-\[6px\] {
     border-style: var(--tw-border-style);
@@ -879,6 +860,9 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-purple-600 {
+    border-color: var(--color-purple-600);
+  }
   .border-t-black {
     border-top-color: var(--color-black);
   }
@@ -893,6 +877,9 @@
   }
   .bg-\[var\(--accent4\)\] {
     background-color: var(--accent4);
+  }
+  .bg-\[var\(--black\)\] {
+    background-color: var(--black);
   }
   .bg-\[var\(--border\)\] {
     background-color: var(--border);
@@ -909,14 +896,14 @@
   .bg-\[var\(--secondery-color\)\] {
     background-color: var(--secondery-color);
   }
+  .bg-\[ver\(--secondary-color\)\] {
+    background-color: ver(--secondary-color);
+  }
   .bg-black {
     background-color: var(--color-black);
   }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
-  }
-  .bg-orange-500 {
-    background-color: var(--color-orange-500);
   }
   .bg-purple-600 {
     background-color: var(--color-purple-600);
@@ -924,8 +911,8 @@
   .bg-purple-700 {
     background-color: var(--color-purple-700);
   }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
+  .bg-purple-900 {
+    background-color: var(--color-purple-900);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -948,8 +935,14 @@
   .bg-\[url\(\.\.\/assets\/img\/home\/heroslider\.png\)\] {
     background-image: url(../assets/img/home/heroslider.png);
   }
+  .bg-\[url\(\.\.\/assets\/img\/product\/page-hero\.png\)\] {
+    background-image: url(../assets/img/product/page-hero.png);
+  }
   .bg-cover {
     background-size: cover;
+  }
+  .bg-center {
+    background-position: center;
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
@@ -987,9 +980,6 @@
   .p-\[2px\] {
     padding: 2px;
   }
-  .p-\[4px\] {
-    padding: 4px;
-  }
   .p-\[8px\] {
     padding: 8px;
   }
@@ -1017,6 +1007,9 @@
   .px-\[4px\] {
     padding-inline: 4px;
   }
+  .px-\[10px\] {
+    padding-inline: 10px;
+  }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
   }
@@ -1032,6 +1025,12 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
@@ -1043,6 +1042,9 @@
   }
   .py-\[20px\] {
     padding-block: 20px;
+  }
+  .py-\[60px\] {
+    padding-block: 60px;
   }
   .py-\[80px\] {
     padding-block: 80px;
@@ -1056,8 +1058,14 @@
   .pt-\[50px\] {
     padding-top: 50px;
   }
+  .pr-1 {
+    padding-right: calc(var(--spacing) * 1);
+  }
   .pr-\[12px\] {
     padding-right: 12px;
+  }
+  .pb-0 {
+    padding-bottom: calc(var(--spacing) * 0);
   }
   .pb-1 {
     padding-bottom: calc(var(--spacing) * 1);
@@ -1079,6 +1087,9 @@
   }
   .pb-\[70px\] {
     padding-bottom: 70px;
+  }
+  .pl-2 {
+    padding-left: calc(var(--spacing) * 2);
   }
   .text-center {
     text-align: center;
@@ -1173,6 +1184,9 @@
   }
   .text-\[var\(--black\)\] {
     color: var(--black);
+  }
+  .text-\[var\(--border2\)\] {
+    color: var(--border2);
   }
   .text-\[var\(--primary-color\)\] {
     color: var(--primary-color);
@@ -1357,10 +1371,27 @@
       }
     }
   }
+  .peer-checked\:border-purple-600 {
+    &:is(:where(.peer):checked ~ *) {
+      border-color: var(--color-purple-600);
+    }
+  }
+  .peer-checked\:bg-purple-100 {
+    &:is(:where(.peer):checked ~ *) {
+      background-color: var(--color-purple-100);
+    }
+  }
   .after\:hidden {
     &::after {
       content: var(--tw-content);
       display: none;
+    }
+  }
+  .hover\:border-\[var\(--primary-color\)\] {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--primary-color);
+      }
     }
   }
   .hover\:bg-\[var\(--accent1\)\] {
@@ -1377,17 +1408,17 @@
       }
     }
   }
+  .hover\:bg-\[var\(--primary-color\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--primary-color);
+      }
+    }
+  }
   .hover\:bg-\[var\(--secondary-color\)\] {
     &:hover {
       @media (hover: hover) {
         background-color: var(--secondary-color);
-      }
-    }
-  }
-  .hover\:bg-orange-600 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-orange-600);
       }
     }
   }
@@ -1402,6 +1433,20 @@
     &:hover {
       @media (hover: hover) {
         color: var(--primary-color);
+      }
+    }
+  }
+  .hover\:text-\[var\(--secondary-color\)\] {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--secondary-color);
+      }
+    }
+  }
+  .hover\:text-\[var\(--text\)\] {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--text);
       }
     }
   }
@@ -1435,6 +1480,11 @@
       }
     }
   }
+  .focus\:\!border-\[var\(--primary-color\)\] {
+    &:focus {
+      border-color: var(--primary-color) !important;
+    }
+  }
   .focus\:border-\[var\(--primary-color\)\] {
     &:focus {
       border-color: var(--primary-color);
@@ -1462,6 +1512,26 @@
       background-color: var(--accent1);
     }
   }
+  .has-\[\:checked\]\:border-purple-600 {
+    &:has(*:is(:checked)) {
+      border-color: var(--color-purple-600);
+    }
+  }
+  .has-\[\:checked\]\:bg-\[\#f5f6f6\] {
+    &:has(*:is(:checked)) {
+      background-color: #f5f6f6;
+    }
+  }
+  .has-\[\:checked\]\:bg-\[var\(--border-color\)\] {
+    &:has(*:is(:checked)) {
+      background-color: var(--border-color);
+    }
+  }
+  .has-\[\:checked\]\:bg-purple-100 {
+    &:has(*:is(:checked)) {
+      background-color: var(--color-purple-100);
+    }
+  }
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1482,6 +1552,11 @@
       margin-bottom: calc(var(--spacing) * 0);
     }
   }
+  .md\:ml-2 {
+    @media (width >= 48rem) {
+      margin-left: calc(var(--spacing) * 2);
+    }
+  }
   .md\:\!block {
     @media (width >= 48rem) {
       display: block !important;
@@ -1495,6 +1570,11 @@
   .md\:hidden {
     @media (width >= 48rem) {
       display: none;
+    }
+  }
+  .md\:max-h-full {
+    @media (width >= 48rem) {
+      max-height: 100%;
     }
   }
   .md\:w-1\/4 {
@@ -1567,6 +1647,20 @@
       gap: 40px;
     }
   }
+  .md\:space-x-3 {
+    @media (width >= 48rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-x-reverse: 0;
+        margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
+        margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
+      }
+    }
+  }
+  .md\:p-4 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
   .md\:p-6 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 6);
@@ -1575,6 +1669,11 @@
   .md\:px-10 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:py-\[120px\] {
+    @media (width >= 48rem) {
+      padding-block: 120px;
     }
   }
   .md\:pb-2 {
@@ -1610,6 +1709,11 @@
       font-size: 44px;
     }
   }
+  .md\:opacity-100 {
+    @media (width >= 48rem) {
+      opacity: 100%;
+    }
+  }
   .lg\:right-8 {
     @media (width >= 64rem) {
       right: calc(var(--spacing) * 8);
@@ -1618,6 +1722,11 @@
   .lg\:bottom-8 {
     @media (width >= 64rem) {
       bottom: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:left-8 {
+    @media (width >= 64rem) {
+      left: calc(var(--spacing) * 8);
     }
   }
   .lg\:mt-0 {
@@ -1635,6 +1744,11 @@
       margin-bottom: calc(var(--spacing) * 0);
     }
   }
+  .lg\:mb-2 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 2);
+    }
+  }
   .lg\:block {
     @media (width >= 64rem) {
       display: block;
@@ -1650,9 +1764,24 @@
       display: none;
     }
   }
+  .lg\:max-h-full {
+    @media (width >= 64rem) {
+      max-height: 100%;
+    }
+  }
   .lg\:w-1\/2 {
     @media (width >= 64rem) {
       width: calc(1/2 * 100%);
+    }
+  }
+  .lg\:w-1\/4 {
+    @media (width >= 64rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .lg\:w-3\/4 {
+    @media (width >= 64rem) {
+      width: calc(3/4 * 100%);
     }
   }
   .lg\:w-72 {
@@ -1683,6 +1812,11 @@
   .lg\:text-\[34px\] {
     @media (width >= 64rem) {
       font-size: 34px;
+    }
+  }
+  .lg\:opacity-100 {
+    @media (width >= 64rem) {
+      opacity: 100%;
     }
   }
   .xl\:grid-cols-4 {
@@ -1807,6 +1941,54 @@
   border-radius: 30px;
   background: var(--primary-color);
   transform: scale(1.2);
+}
+.range-slider {
+  position: relative;
+  width: 100%;
+  height: 6px;
+}
+.range-slider input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 6px;
+  background: transparent;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  z-index: 3;
+}
+.range-slider input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: var(--border2);
+  cursor: pointer;
+  border: 2px solid var(--primary-color);
+  pointer-events: all;
+  position: relative;
+  z-index: 5;
+}
+.slider-track {
+  position: absolute;
+  height: 6px;
+  background: var(--primary-color);
+  border-radius: 9999px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.slider-bg {
+  position: absolute;
+  height: 6px;
+  background: #d1d5db;
+  border-radius: 9999px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  z-index: 1;
 }
 @property --tw-translate-x {
   syntax: "*";
