checkout, wishlist page done

--- a/src/output.css
+++ b/src/output.css
@@ -12,21 +12,24 @@
     --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
+    --color-red-700: oklch(50.5% 0.213 27.518);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-green-700: oklch(52.7% 0.154 150.069);
     --color-emerald-600: oklch(59.6% 0.145 163.225);
     --color-emerald-700: oklch(50.8% 0.118 165.612);
+    --color-sky-500: oklch(68.5% 0.169 237.323);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-blue-800: oklch(42.4% 0.199 265.638);
     --color-indigo-500: oklch(58.5% 0.233 277.117);
     --color-indigo-600: oklch(51.1% 0.262 276.966);
     --color-indigo-700: oklch(45.7% 0.24 277.023);
-    --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-purple-600: oklch(55.8% 0.288 302.321);
     --color-purple-700: oklch(49.6% 0.265 301.924);
+    --color-purple-800: oklch(43.8% 0.218 303.724);
     --color-purple-900: oklch(38.1% 0.176 304.987);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
@@ -44,7 +47,6 @@
     --container-sm: 24rem;
     --container-lg: 32rem;
     --container-xl: 36rem;
-    --container-4xl: 56rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
     --text-xs: 0.75rem;
@@ -525,6 +527,21 @@
   .\!h-10 {
     height: calc(var(--spacing) * 10) !important;
   }
+  .\!h-\[20px\] {
+    height: 20px !important;
+  }
+  .\!h-\[40px\] {
+    height: 40px !important;
+  }
+  .\!h-\[42px\] {
+    height: 42px !important;
+  }
+  .\!h-\[44px\] {
+    height: 44px !important;
+  }
+  .\!h-\[48px\] {
+    height: 48px !important;
+  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
@@ -561,9 +578,6 @@
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
@@ -579,14 +593,29 @@
   .h-\[40px\] {
     height: 40px;
   }
+  .h-\[48px\] {
+    height: 48px;
+  }
   .h-\[50px\] {
     height: 50px;
+  }
+  .h-\[100\%\] {
+    height: 100%;
+  }
+  .h-\[100px\] {
+    height: 100px;
   }
   .h-\[140px\] {
     height: 140px;
   }
   .h-\[150px\] {
     height: 150px;
+  }
+  .h-\[250px\] {
+    height: 250px;
+  }
+  .h-\[300px\] {
+    height: 300px;
   }
   .h-\[calc\(100\%-120px\)\] {
     height: calc(100% - 120px);
@@ -599,6 +628,9 @@
   }
   .max-h-0 {
     max-height: calc(var(--spacing) * 0);
+  }
+  .max-h-\[250px\] {
+    max-height: 250px;
   }
   .max-h-\[calc\(100vh-280px\)\] {
     max-height: calc(100vh - 280px);
@@ -614,6 +646,9 @@
   }
   .\!w-10 {
     width: calc(var(--spacing) * 10) !important;
+  }
+  .\!w-full {
+    width: 100% !important;
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
@@ -641,9 +676,6 @@
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
   }
   .w-24 {
     width: calc(var(--spacing) * 24);
@@ -749,9 +781,6 @@
   .resize-y {
     resize: vertical;
   }
-  .appearance-none {
-    appearance: none;
-  }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -805,6 +834,9 @@
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
+  }
+  .gap-\[2px\] {
+    gap: 2px;
   }
   .gap-\[4px\] {
     gap: 4px;
@@ -921,8 +953,14 @@
   .overflow-visible {
     overflow: visible;
   }
+  .overflow-x-auto {
+    overflow-x: auto;
+  }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .\!rounded-\[30px\] {
+    border-radius: 30px !important;
   }
   .\!rounded-full {
     border-radius: calc(infinity * 1px) !important;
@@ -942,6 +980,9 @@
   .rounded-\[16px\] {
     border-radius: 16px;
   }
+  .rounded-\[30px\] {
+    border-radius: 30px;
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -954,20 +995,20 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
-  .rounded-l-lg {
-    border-top-left-radius: var(--radius-lg);
-    border-bottom-left-radius: var(--radius-lg);
+  .\!rounded-l-\[30px\] {
+    border-top-left-radius: 30px !important;
+    border-bottom-left-radius: 30px !important;
   }
-  .rounded-l-md {
-    border-top-left-radius: var(--radius-md);
-    border-bottom-left-radius: var(--radius-md);
+  .rounded-l-\[30px\] {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
   }
   .rounded-tl-full {
     border-top-left-radius: calc(infinity * 1px);
   }
-  .rounded-r-lg {
-    border-top-right-radius: var(--radius-lg);
-    border-bottom-right-radius: var(--radius-lg);
+  .rounded-r-\[30px\] {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
   }
   .rounded-r-md {
     border-top-right-radius: var(--radius-md);
@@ -1015,17 +1056,13 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 6px;
   }
-  .border-r-0 {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 0px;
-  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
-  .border-b-2 {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 2px;
+  .\!border-none {
+    --tw-border-style: none !important;
+    border-style: none !important;
   }
   .border-none {
     --tw-border-style: none;
@@ -1035,8 +1072,17 @@
     --tw-border-style: solid;
     border-style: solid;
   }
+  .\!border-\[var\(--border\)\] {
+    border-color: var(--border) !important;
+  }
   .\!border-\[var\(--primery-color\)\] {
     border-color: var(--primery-color) !important;
+  }
+  .\!border-red-500 {
+    border-color: var(--color-red-500) !important;
+  }
+  .border-\[var\(--accent1\)\] {
+    border-color: var(--accent1);
   }
   .border-\[var\(--black\)\] {
     border-color: var(--black);
@@ -1053,8 +1099,8 @@
   .border-\[var\(--primary-color\)\] {
     border-color: var(--primary-color);
   }
-  .border-blue-600 {
-    border-color: var(--color-blue-600);
+  .border-\[var\(--secondary-color\)\] {
+    border-color: var(--secondary-color);
   }
   .border-emerald-600 {
     border-color: var(--color-emerald-600);
@@ -1071,11 +1117,23 @@
   .border-transparent {
     border-color: transparent;
   }
+  .border-t-\[var\(--border\)\] {
+    border-top-color: var(--border);
+  }
   .border-t-black {
     border-top-color: var(--color-black);
   }
   .border-b-\[var\(--border\)\] {
     border-bottom-color: var(--border);
+  }
+  .\!bg-\[var\(--accent1\)\] {
+    background-color: var(--accent1) !important;
+  }
+  .\!bg-\[var\(--secondary-color\)\] {
+    background-color: var(--secondary-color) !important;
+  }
+  .\!bg-\[var\(--white\)\] {
+    background-color: var(--white) !important;
   }
   .bg-\[\#78C841\] {
     background-color: #78C841;
@@ -1155,6 +1213,9 @@
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
   }
+  .bg-purple-700 {
+    background-color: var(--color-purple-700);
+  }
   .bg-red-100 {
     background-color: var(--color-red-100);
   }
@@ -1163,6 +1224,9 @@
   }
   .bg-red-600 {
     background-color: var(--color-red-600);
+  }
+  .bg-sky-500 {
+    background-color: var(--color-sky-500);
   }
   .bg-transparent {
     background-color: transparent;
@@ -1212,6 +1276,12 @@
   .object-cover {
     object-fit: cover;
   }
+  .\!p-1 {
+    padding: calc(var(--spacing) * 1) !important;
+  }
+  .\!p-4 {
+    padding: calc(var(--spacing) * 4) !important;
+  }
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
@@ -1242,6 +1312,9 @@
   .p-\[30px\] {
     padding: 30px;
   }
+  .\!px-4 {
+    padding-inline: calc(var(--spacing) * 4) !important;
+  }
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
@@ -1266,6 +1339,12 @@
   .px-\[10px\] {
     padding-inline: 10px;
   }
+  .\!py-1 {
+    padding-block: calc(var(--spacing) * 1) !important;
+  }
+  .\!py-3 {
+    padding-block: calc(var(--spacing) * 3) !important;
+  }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
   }
@@ -1280,6 +1359,9 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
@@ -1308,11 +1390,14 @@
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
-  .pt-4 {
-    padding-top: calc(var(--spacing) * 4);
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
   }
   .pt-\[50px\] {
     padding-top: 50px;
@@ -1337,9 +1422,6 @@
   }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
-  }
-  .pb-8 {
-    padding-bottom: calc(var(--spacing) * 8);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
@@ -1410,6 +1492,12 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .\!text-\[12px\] {
+    font-size: 12px !important;
+  }
+  .\!text-\[16px\] {
+    font-size: 16px !important;
+  }
   .text-\[12px\] {
     font-size: 12px;
   }
@@ -1430,6 +1518,9 @@
   }
   .text-\[22px\] {
     font-size: 22px;
+  }
+  .text-\[26px\] {
+    font-size: 26px;
   }
   .text-\[28px\] {
     font-size: 28px;
@@ -1466,6 +1557,15 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
+  .\!text-gray-400 {
+    color: var(--color-gray-400) !important;
+  }
+  .text-\[18x\] {
+    color: 18x;
   }
   .text-\[var\(--accent4\)\] {
     color: var(--accent4);
@@ -1518,8 +1618,8 @@
   .text-green-600 {
     color: var(--color-green-600);
   }
-  .text-indigo-500 {
-    color: var(--color-indigo-500);
+  .text-green-700 {
+    color: var(--color-green-700);
   }
   .text-indigo-600 {
     color: var(--color-indigo-600);
@@ -1535,6 +1635,9 @@
   }
   .text-red-600 {
     color: var(--color-red-600);
+  }
+  .text-red-700 {
+    color: var(--color-red-700);
   }
   .text-white {
     color: var(--color-white);
@@ -1577,12 +1680,18 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .ring-2 {
-    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+  .ring-1 {
+    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .ring-indigo-500 {
-    --tw-ring-color: var(--color-indigo-500);
+  .ring-\[var\(--border\)\] {
+    --tw-ring-color: var(--border);
+  }
+  .ring-green-500 {
+    --tw-ring-color: var(--color-green-500);
+  }
+  .ring-transparent {
+    --tw-ring-color: transparent;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -1636,10 +1745,6 @@
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
-  }
-  .outline-none {
-    --tw-outline-style: none;
-    outline-style: none;
   }
   .group-hover\:block {
     &:is(:where(.group):hover *) {
@@ -1711,9 +1816,19 @@
       }
     }
   }
+  .peer-checked\:border-\[var\(--primary-color\)\] {
+    &:is(:where(.peer):checked ~ *) {
+      border-color: var(--primary-color);
+    }
+  }
   .peer-checked\:border-indigo-500 {
     &:is(:where(.peer):checked ~ *) {
       border-color: var(--color-indigo-500);
+    }
+  }
+  .peer-checked\:border-red-500 {
+    &:is(:where(.peer):checked ~ *) {
+      border-color: var(--color-red-500);
     }
   }
   .peer-checked\:text-indigo-600 {
@@ -1732,15 +1847,43 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
+  .peer-checked\:ring-\[var\(--primary-color\)\] {
+    &:is(:where(.peer):checked ~ *) {
+      --tw-ring-color: var(--primary-color);
+    }
+  }
   .peer-checked\:ring-indigo-500 {
     &:is(:where(.peer):checked ~ *) {
       --tw-ring-color: var(--color-indigo-500);
+    }
+  }
+  .peer-checked\:ring-red-500 {
+    &:is(:where(.peer):checked ~ *) {
+      --tw-ring-color: var(--color-red-500);
     }
   }
   .after\:hidden {
     &::after {
       content: var(--tw-content);
       display: none;
+    }
+  }
+  .focus-within\:ring-\[var\(--primary-color\)\] {
+    &:focus-within {
+      --tw-ring-color: var(--primary-color);
+    }
+  }
+  .focus-within\:ring-red-500 {
+    &:focus-within {
+      --tw-ring-color: var(--color-red-500);
+    }
+  }
+  .group-focus\:focus-within\:\!border-none {
+    &:is(:where(.group):focus *) {
+      &:focus-within {
+        --tw-border-style: none !important;
+        border-style: none !important;
+      }
     }
   }
   .hover\:border-\[var\(--primary-color\)\] {
@@ -1802,6 +1945,13 @@
       }
     }
   }
+  .hover\:bg-gray-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-200);
+      }
+    }
+  }
   .hover\:bg-gray-300 {
     &:hover {
       @media (hover: hover) {
@@ -1813,6 +1963,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-indigo-700);
+      }
+    }
+  }
+  .hover\:bg-purple-800 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-purple-800);
       }
     }
   }
@@ -1834,6 +1991,13 @@
     &:hover {
       @media (hover: hover) {
         color: var(--text);
+      }
+    }
+  }
+  .hover\:text-\[var\(--text2\)\] {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--text2);
       }
     }
   }
@@ -1877,9 +2041,16 @@
       border-color: var(--primary-color);
     }
   }
-  .focus\:border-indigo-500 {
+  .focus\:\!ring-1 {
     &:focus {
-      border-color: var(--color-indigo-500);
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor) !important;
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow) !important;
+    }
+  }
+  .focus\:ring-1 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   .focus\:ring-2 {
@@ -1888,9 +2059,25 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
+  .focus\:\!ring-\[var\(--primary-color\)\] {
+    &:focus {
+      --tw-ring-color: var(--primary-color) !important;
+    }
+  }
+  .focus\:ring-\[var\(--primary-color\)\] {
+    &:focus {
+      --tw-ring-color: var(--primary-color);
+    }
+  }
   .focus\:ring-indigo-500 {
     &:focus {
       --tw-ring-color: var(--color-indigo-500);
+    }
+  }
+  .focus\:\!outline-none {
+    &:focus {
+      --tw-outline-style: none !important;
+      outline-style: none !important;
     }
   }
   .focus\:outline-none {
@@ -1904,9 +2091,46 @@
       background-color: var(--accent1);
     }
   }
+  .has-\[\:checked\]\:border-\[var\(--primary-color\)\] {
+    &:has(*:is(:checked)) {
+      border-color: var(--primary-color);
+    }
+  }
+  .has-\[\:checked\]\:border-red-500 {
+    &:has(*:is(:checked)) {
+      border-color: var(--color-red-500);
+    }
+  }
   .has-\[\:checked\]\:bg-\[\#f5f6f6\] {
     &:has(*:is(:checked)) {
       background-color: #f5f6f6;
+    }
+  }
+  .has-\[\:checked\]\:bg-\[var\(--accent1\)\] {
+    &:has(*:is(:checked)) {
+      background-color: var(--accent1);
+    }
+  }
+  .has-\[\:checked\]\:ring-1 {
+    &:has(*:is(:checked)) {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .has-\[\:checked\]\:ring-2 {
+    &:has(*:is(:checked)) {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .has-\[\:checked\]\:ring-\[var\(--primary-color\)\] {
+    &:has(*:is(:checked)) {
+      --tw-ring-color: var(--primary-color);
+    }
+  }
+  .has-\[\:checked\]\:ring-red-500 {
+    &:has(*:is(:checked)) {
+      --tw-ring-color: var(--color-red-500);
     }
   }
   .sm\:grid-cols-2 {
@@ -1922,24 +2146,6 @@
   .sm\:flex-row {
     @media (width >= 40rem) {
       flex-direction: row;
-    }
-  }
-  .sm\:space-y-0 {
-    @media (width >= 40rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-y-reverse: 0;
-        margin-block-start: calc(calc(var(--spacing) * 0) * var(--tw-space-y-reverse));
-        margin-block-end: calc(calc(var(--spacing) * 0) * calc(1 - var(--tw-space-y-reverse)));
-      }
-    }
-  }
-  .sm\:space-x-4 {
-    @media (width >= 40rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-x-reverse: 0;
-        margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
-        margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
-      }
     }
   }
   .sm\:px-6 {
@@ -2234,29 +2440,6 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
-    }
-  }
-  .lg\:space-y-0 {
-    @media (width >= 64rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-y-reverse: 0;
-        margin-block-start: calc(calc(var(--spacing) * 0) * var(--tw-space-y-reverse));
-        margin-block-end: calc(calc(var(--spacing) * 0) * calc(1 - var(--tw-space-y-reverse)));
-      }
-    }
-  }
-  .lg\:space-x-8 {
-    @media (width >= 64rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-x-reverse: 0;
-        margin-inline-start: calc(calc(var(--spacing) * 8) * var(--tw-space-x-reverse));
-        margin-inline-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-x-reverse)));
-      }
-    }
-  }
-  .lg\:p-8 {
-    @media (width >= 64rem) {
-      padding: calc(var(--spacing) * 8);
     }
   }
   .lg\:px-8 {
